tests/e2e/tab_error.error
Error: syntax error in story at line 2, column 13

2|            a = $
                  ^

E0041: `$` is not allowed here
